Update micro (by updating boilerplate)

--- a/client/.eslintrc.yaml
+++ b/client/.eslintrc.yaml
@@ -10,12 +10,16 @@ globals:
 extends: eslint
 rules:
     # Disable because...
+    # Valid use case if behind toggle
+    no-console: off
     # Valid use case to match control characters
     no-control-regex: off
     # We use Sphinx for documentation
     valid-jsdoc: off
     # API design is best figured out by humans (yet)
     class-methods-use-this: off
+    # Superfluous with let
+    no-loop-func: off
     # Superfluous in ES5+
     radix: off
     # undefined is a valid feature
@@ -25,6 +29,8 @@ rules:
     newline-after-var: off
     # Some entities, like private methods, do not require documentation
     require-jsdoc: off
+    # Comparison operators in arrow functions allow for concise expressions
+    no-confusing-arrow: off
     # Mixing let and const may be less readable
     prefer-const: off
 
@@ -40,7 +46,7 @@ rules:
           FunctionExpression:
               parameters: first
           ObjectExpression: first
-    # Allow __type__ property
+    # Allow special properties
     no-underscore-dangle:
         - error
         - allow:
@@ -50,6 +56,11 @@ rules:
     object-curly-spacing:
         - error
         - never
+    # Avoid quote escapes
+    quotes:
+        - error
+        - double
+        - avoidEscape: true
 
     # Additional rules
     no-extra-parens: error
