--- a/.pylintrc
+++ b/.pylintrc
@@ -5,10 +5,13 @@ load-plugins=pylint.extensions.docstyle
 disable=
     # Good design is best figured out by humans (yet)
     design,
-    # There are built-ins with common names like id
-    redefined-builtin,
+    too-many-lines,
+    # Confuses redefined functions (see https://github.com/PyCQA/pylint/issues/2336)
+    assignment-from-no-return,
     # Arguments should not be manipulated anyway
-    dangerous-default-value
+    dangerous-default-value,
+    # There are built-ins with common names like id
+    redefined-builtin
 
 [reports]
 output-format=colorized
@@ -19,12 +22,18 @@ function-rgx=[a-z_][a-z0-9_]*$
 variable-rgx=%(function-rgx)s
 attr-rgx=%(function-rgx)s
 argument-rgx=%(function-rgx)s
+class-rgx=[A-Z_][a-zA-Z0-9]*$
 class-attribute-rgx=([A-Za-z_][A-Za-z0-9_]*|(__.*__))$
 method-rgx=%(function-rgx)s
 
 [format]
 # Long URLs and strings may be more readable
 ignore-long-lines=://|'.+'|".+"
+
+[imports]
+# Pylint does not classify development mode dependencies correctly (see
+# https://github.com/PyCQA/pylint/issues/1797)
+known-third-party = micro
 
 [typecheck]
 # http.client status codes are defined dynamically
