--- a/client/.eslintrc.yaml
+++ b/client/.eslintrc.yaml
@@ -7,34 +7,53 @@ globals:
     micro: false
     ui: false
     listling: false
-extends: eslint
+extends: eslint:all
 rules:
-    # Disable because...
-    # Valid use case if behind toggle
-    no-console: off
-    # Valid use case to match control characters
-    no-control-regex: off
-    # We use Sphinx for documentation
-    valid-jsdoc: off
-    # API design is best figured out by humans (yet)
-    class-methods-use-this: off
-    # Superfluous with let
-    no-loop-func: off
-    # Superfluous in ES5+
-    radix: off
-    # undefined is a valid feature
-    no-undefined: off
-    # Blank lines should be flexibly inserted where they support the train of thought
+    # Follow https://crockford.com/javascript/code.html
+    dot-location:
+        - error
+        - property
+    func-names: off
+    init-declarations: off
     lines-around-comment: off
-    newline-after-var: off
-    # Some entities, like private methods, do not require documentation
-    require-jsdoc: off
-    # Comparison operators in arrow functions allow for concise expressions
+    no-param-reassign: off
+    no-ternary: off
+    padded-blocks: off
+    quote-props:
+        - error
+        - as-needed
+    # Valid features
+    no-bitwise: off
+    no-console: off
+    no-control-regex: off
+    no-plusplus: off
+    no-process-env: off
+    no-undefined: off
+    # Good design is best figured out by humans (yet)
+    class-methods-use-this: off
+    id-length: off
+    max-classes-per-file: off
+    max-lines: off
+    max-lines-per-function: off
+    max-params: off
+    max-statements: off
+    # Concise code
+    array-element-newline: off
+    arrow-parens:
+        - error
+        - as-needed
+    implicit-arrow-linebreak: off
+    multiline-ternary: off
+    newline-per-chained-call: off
     no-confusing-arrow: off
-    # Mixing let and const may be less readable
-    prefer-const: off
-
-    # Allow aligning with first argument, may be more readable
+    no-empty-function: off
+    no-mixed-operators: off
+    object-property-newline: off
+    one-var: off
+    wrap-regex: off
+    # Aligning with first argument may be more readable
+    array-bracket-newline: off
+    function-paren-newline: off
     indent:
         - error
         - 4
@@ -46,28 +65,21 @@ rules:
           FunctionExpression:
               parameters: first
           ObjectExpression: first
-    # Allow special properties
-    no-underscore-dangle:
+    object-curly-newline: off
+    # Arrangement should support train of thought
+    sort-keys: off
+    sort-vars: off
+    # Superfluous with modern JavaScript
+    no-loop-func: off
+    radix: off
+    func-style:
         - error
-        - allow:
-              - __type__
-          allowAfterThis: true
-    # Make consistent with other brackets
-    object-curly-spacing:
-        - error
-        - never
-    # Avoid quote escapes
-    quotes:
-        - error
-        - double
-        - avoidEscape: true
-
-    # Additional rules
-    no-extra-parens: error
-    no-template-curly-in-string: error
-    no-extra-label: error
-    no-warning-comments: error
-    linebreak-style: error
+        - declaration
+    # Non-Camelcase is found in external JSON
+    camelcase: off
+    # First word may be lower case proper name
+    capitalized-comments: off
+    # Less line wrapping and long strings may be more readable
     max-len:
         - error
         - code: 100
@@ -75,7 +87,32 @@ rules:
           ignoreStrings: true
           ignoreTemplateLiterals: true
           ignoreUrls: true
-    nonblock-statement-body-position: error
-    prefer-rest-params: error
-    prefer-spread: error
-    rest-spread-spacing: error
+    # Okay for i.e. default parameters, length checks, …
+    no-magic-numbers: off
+    # Okay for private and special properties
+    no-underscore-dangle:
+        - error
+        - allow:
+              - __type__
+          allowAfterThis: true
+    # Mixing let and const may be less readable
+    prefer-const: off
+    # Escapes may be less readable
+    quotes:
+        - error
+        - double
+        - avoidEscape: true
+    # False positive for certain safe operations
+    require-atomic-updates: off
+    # Some entities, like private methods, do not require documentation
+    require-jsdoc: off
+    # Strict mode everywhere
+    strict:
+        - error
+        - global
+    # We use Sphinx for documentation
+    valid-jsdoc: off
+    # Compatibility with former eslint-config-eslint (see
+    # https://github.com/noyainrain/micro/issues/29)
+    multiline-comment-style: off
+    space-before-function-paren: off
