Add map use case
Implement Item.location and enable location for List.features. Add map use case for Lists.create()
and Lists.create_example().

Display location for items and add list location feature toggle. Visualize locations on a map. Make
map use case available on start page.

Also make items navigable, update micro and adjust deprecated use of Page.attachedCallback() and
History.replaceState().

Close #28.

--- a/client/.eslintrc.yaml
+++ b/client/.eslintrc.yaml
@@ -97,6 +97,8 @@ rules:
           allowAfterThis: true
     # Mixing let and const may be less readable
     prefer-const: off
+    # No cross-browser support yet
+    prefer-object-spread: off
     # Escapes may be less readable
     quotes:
         - error
