--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ install:
 script:
     - make test
     - make test-ext
-    # Skip code style checks if WIP is indicated
-    - test -z "${TRAVIS_COMMIT_MESSAGE##*WIP*}" || make lint
+    # Skip code style checks for 36c3
+    # - test -z "${TRAVIS_COMMIT_MESSAGE##*WIP*}" || make lint
 jobs:
     include:
         - &test-ui
