--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
         "clean": "rm -rf node_modules"
     },
     "dependencies": {
-        "@noyainrain/micro": "noyainrain/micro#35c3"
+        "@noyainrain/micro": "^0.27"
     },
     "devDependencies": {
         "eslint": "~5.3",
