Make app shell available offline
For this update to micro 0.36 and set up the build manifest. Also include Python 3.7 in CI.

Breaking changes: Update to micro 0.36.

Close #42.

--- a/.pylintrc
+++ b/.pylintrc
@@ -6,8 +6,11 @@ disable=
     # Good design is best figured out by humans (yet)
     design,
     too-many-lines,
+    too-many-nested-blocks,
     # Confuses redefined functions (see https://github.com/PyCQA/pylint/issues/2336)
     assignment-from-no-return,
+    # Fails for Generic (see https://github.com/PyCQA/pylint/issues/2717)
+    duplicate-bases,
     # Arguments should not be manipulated anyway
     dangerous-default-value,
     # There are built-ins with common names like id
