--- a/client/.eslintrc.yaml
+++ b/client/.eslintrc.yaml
@@ -98,6 +98,8 @@ rules:
           allowAfterThis: true
     # Mixing let and const may be less readable
     prefer-const: off
+    # Unpacking a single value may be less readable
+    prefer-destructuring: off
     # No cross-browser support yet
     prefer-object-spread: off
     # Escapes may be less readable
