Set up rc3 branch
Include micro and disable tests relying on Git history. Skip CI code style checks.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,13 @@ before_install:
 install:
     - make deps
     - make deps-dev
+    - make -C micro deps deps-dev
 script:
     - make test
     - make test-ext
+    - make -C micro type test test-ext
     # Skip code style checks if WIP is indicated
-    - test -z "${TRAVIS_COMMIT_MESSAGE##*WIP*}" || make lint
+    # - test -z "${TRAVIS_COMMIT_MESSAGE##*WIP*}" || make lint
 jobs:
     include:
         - &test-ui
